added start msg

--- a/public/setup.html
+++ b/public/setup.html
@@ -142,6 +142,7 @@
         
         <div style="margin-top: 20px;">
             <button id="check-live-btn" class="button check-live">Check for Live Streams</button>
+            <button id="start-messaging-btn" class="button">Start Messaging</button>
             <div id="check-live-status"></div>
         </div>
         <div style="margin-top: 20px;">
